# raytracer

./: CMakeLists.txt  compile_commands.json  main.cpp
.cache/clangd/index/: Camera.h.349B84AEF900A5E2.idx  Color.h.5E4EEBA6080464DC.idx  Image.h.893EDF5F7E819168.idx  Interval.h.42B58056214742E7.idx  Object.h.85ADC323D479C97F.idx  ObjectList.h.3003CA27CE4C06CA.idx  OutputFile.h.451014D202FA9821.idx  Ray.h.08C61F9B0434D143.idx  Sphere.h.719C9453AE856F1E.idx  Vec3.h.9F79B3B5C877E93F.idx  constants.h.ABEBA49C347F3C05.idx  main.cpp.0486E54D044BFEED.idx
objects/: Object.h  ObjectList.h  Sphere.h
utils/: Camera.h  Color.h  Image.h  Interval.h  OutputFile.h  Ray.h  Vec3.h  constants.h
